crates/core/src/parser/snapshots/latex_math_core__parser__tests__snapshot_color-10.snap
---
source: crates/core/src/parser/mod.rs
expression: "parse(r\"\\color red{1}\")"
---
Ok(
    [
        Color(
            Color {
                color: Named(
                    "r",
                ),
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '𝑒',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑑',
                atom_type: Alpha,
            },
        ),
        Group(
            [
                Symbol(
                    Symbol {
                        codepoint: '1',
                        atom_type: Alpha,
                    },
                ),
            ],
        ),
    ],
)
