crates/core/src/parser/snapshots/latex_math_core__parser__tests__snapshot_color-4.snap
---
source: crates/core/src/parser/mod.rs
expression: "parse(r\"\\blue{1}\")"
---
Ok(
    [
        Color(
            Color {
                color: Rgba(
                    RGBA(
                        0,
                        0,
                        255,
                        255,
                    ),
                ),
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '1',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
    ],
)
