crates/core/src/parser/snapshots/latex_math_core__parser__tests__snapshot_color-7.snap
---
source: crates/core/src/parser/mod.rs
expression: "parse(r\"\\color{chocolate}\\alpha\")"
---
Ok(
    [
        Color(
            Color {
                color: Named(
                    "chocolate",
                ),
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '𝛼',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
    ],
)
