crates/core/src/parser/snapshots/latex_math_core__parser__tests__snapshot_color-8.snap
---
source: crates/core/src/parser/mod.rs
expression: "parse(r\"\\color{bred}{1+1}\")"
---
Ok(
    [
        Color(
            Color {
                color: Named(
                    "bred",
                ),
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '1',
                            atom_type: Alpha,
                        },
                    ),
                    Symbol(
                        Symbol {
                            codepoint: '+',
                            atom_type: Binary,
                        },
                    ),
                    Symbol(
                        Symbol {
                            codepoint: '1',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
    ],
)
